# GPS-Tracker-Device

./: README.md
Hardware/: Lab_1.csv  Lab_1.kicad_pcb-bak  Lab_1.pro  Lab_1.sch-bak  Lab_1_2.net  Lab_1_Test.kicad_pcb  Lib_LM1117ADJ.lib  Project-cache.lib  Project.kicad_pcb  Project.kicad_pcb-bak  Project.net  Project.sch  Project.sch-bak  fp-lib-table  sym-lib-table
Hardware/GERBER/: Lab_1-B_Cu.gbr  Lab_1-B_Mask.gbr  Lab_1-B_Paste.gbr  Lab_1-B_SilkS.gbr  Lab_1-Edge_Cuts.gbr  Lab_1-F_Cu.gbr  Lab_1-F_Mask.gbr  Lab_1-F_Paste.gbr  Lab_1-F_SilkS.gbr  Lab_1-NPTH-drl_map.gbr  Lab_1-NPTH.drl  Lab_1-PTH-drl_map.gbr  Lab_1-PTH.drl
Hardware/GERBER_PROJECT_ANVÄND_DEN_HÄR_TANKEN/: Lab_1-B_Adhes.gbr  Lab_1-B_Cu.gbr  Lab_1-B_Fab.gbr  Lab_1-B_Mask.gbr  Lab_1-B_Paste.gbr  Lab_1-B_SilkS.gbr  Lab_1-Cmts_User.gbr  Lab_1-Dwgs_User.gbr  Lab_1-Eco1_User.gbr  Lab_1-Eco2_User.gbr  Lab_1-Edge_Cuts.gbr  Lab_1-F_Adhes.gbr  Lab_1-F_CrtYd.gbr  Lab_1-F_Cu.gbr  Lab_1-F_Fab.gbr  Lab_1-F_Mask.gbr  Lab_1-F_Paste.gbr  Lab_1-F_SilkS.gbr  Lab_1-Margin.gbr  Lab_1.plt
Hardware/Lab_1_footprint_lib.pretty/: CMWX1ZZABZ.kicad_mod  CMWX1ZZABZ_longer_padz.kicad_mod  Power_Switch_cuuul.kicad_mod
Hardware/Tracker_Device/: fp-info-cache
Software/: Cargo.toml  openocd.cfg  openocd.gdb
Software/.cargo/: config
Software/src/: main.rs
